# marketing-os

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  analytics.py  approvals.py  main.py  models.py  storage.py
app/agents/: __init__.py  campaign_planner.py  competitor_intel.py  cro_funnel.py  customer_insights.py  designer.py  email_lifecycle.py  market_research.py  seo_content.py
app/orchestration/: __init__.py  chief_marketing_officer.py
app/services/: __init__.py  product_dna_service.py
app/static/: index.html
cloudflare/: wrangler.toml
cloudflare/public/: index.html
cloudflare/src/: assets.js  config.js  deliverables.js  experience.js  llm-client.js  node-prompts.js  orchestrator.js  strategy.js  utils.js  worker.js
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-07-03-marketing-os-final-delivery-pass.md
scripts/: capture_screenshots.mjs
tests/: test_api.py  test_approvals.py  test_brand_agnostic_os.py  test_campaign_flow.py  test_onboarding.py  test_phase3_agents.py  test_phase3_api.py  test_phase3_orchestration.py  test_reporting.py  test_specialist_agents.py  test_web_experience.py
